[package]
name = "cliheadlines"
version = "0.1.0"
edition = "2021"

description = "A Simple cli news reader application"
license ="MIT"
authors = ["oirtstut"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
dotenv = "0.15.0"
newsapi = {path = "./newsapi"} 
termimad = "0.20.3"
