[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features = ["json"], optional = true }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
thiserror = "1.0.36"
ureq = {version = "2.5.0", features = ["json"]}
url = "2.3.1"

[features]
async = [
    "reqwest"
]